// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders filled Button correctly 1`] = `
<Button
  label="String"
  link="String"
  tab={0}
  targetBlank="_blank"
  type="filled"
/>
`;

exports[`renders ghost Button correctly 1`] = `
<Button
  label="String"
  link="String"
  tab={0}
  targetBlank="_blank"
  type="ghost"
/>
`;
